--- a/packages/ubuntu-18.04_amd64/docker-compose.yml
+++ b/packages/ubuntu-18.04_amd64/docker-compose.yml
@@ -6,4 +6,4 @@ services:
       context: .
     command: cp -r /leopays/build/packages /tmp
     volumes:
-      - ./packages:/tmp/packages
+      - ./package:/tmp/packages
